2017-02-19  Bruno Haible  <bruno@clisp.org>

	Remove the assembly-language optimizations for m68k.
	They are bitrotten, since Linux/m68k is dead. Modern m68k variants
	probably have different performance characteristics than the 68020.
	* ari68020.d: Remove file.
	* makemake.in (ARI_ASMD, ARI_ASMS, ARI_ASMC): Simplify accordingly.
	* arilev1.d: Likewise.
	* arilev0.d (sign_of_sint32, sign_of_sint16, high16, highlow32,
	highlow32_0, mulu32, divu_3216_1616, divu_6432_3232): Remove __asm__
	code for m68k.
	* intlog.d (integerlength16, integerlength32: Likewise.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Fix collision between ASCII character names and Unicode character names.
	* charstrg.d (char_name): Special case for #\U0001F514 and #\U0001F5CF.
	(name_char): Special case for "UNICODE_BELL" and "UNICODE PAGE".

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Fix clang warning "flag '-falign-functions=4' is not supported".
	* makemake.in (XCC_BRAND): New variable.
	(XCFLAGS): Don't use -falign-functions=4 with clang.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Fix build failure with clang.
	* lispbibl.d (STACK_register, mv_count_register, value1_register,
	SP_register): Don't define for clang.
	(restartf_t): Don't use _Noreturn on a function type, except with GCC.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Make --with-{libsigsegv,libffcall}-prefix with clang on 64-bit Ubuntu.
	* glm4/lib-prefix.m4: Update from gnulib.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2017-02-19  Bruno Haible  <bruno@clisp.org>

	Modernize: Really update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported
	build-prerequisites".
	* Makefile.devel (GNULIB_AUX, build-aux-update): Fetch depcomp and
	install-sh from Automake, not gnulib. Fetch also ar-lib from Automake.
	* build-aux/config.guess: Update from gnulib git.
	* build-aux/config.rpath: Likewise.
	* build-aux/config.sub: Likewise.