@@ -1,3 +1,8 @@
+2017-02-20  Bruno Haible  <bruno@clisp.org>
+
+	Remove obsolete file.
+	* unix/sigsegv.c: Remove file. Obsoleted by the libsigsegv package.
+
 2017-02-19  Bruno Haible  <bruno@clisp.org>
 
 	Remove the assembly-language optimizations for m68k.
